atualização no grid

--- a/index.html
+++ b/index.html
@@ -37,29 +37,35 @@
   
   <div class="grid-container">
     <div class="grid-item">
-      <img src="imagens\eleicoes.jpg" width="300px"/><br>
+      <figure>
+        <img src="imagens\eleicoes.jpg" width="300px"/>
+      </figure><br>
       <strong>Radar IFSP: informe-se sobre as eleições do dia 13 de outubro</strong>
-      <p>Todos os alunos e servidores podem votar; acesse aqui a cabine de votação online do seu câmpus</p>
+      <br>
+      Todos os alunos e servidores podem votar; acesse aqui a cabine de votação online do seu câmpus
     </div>
     <div class="grid-item">
-      <img src="imagens\snct.jpg" width="300px"/><br>
-      <strong>IFSP: SNCT reúne atividades entre 19 e 24 de outubro</strong>
-      <p>Programação reunirá iniciativas para aproximar pesquisadores e atividades culturais</p>
+      <figure>
+        <img src="imagens\snct.jpg" width="300px"/>
+      </figure><br>
+      <strong>IFSP: SNCT reúne atividades entre 19 e 24 de outubro</strong><br>
+      Programação reunirá iniciativas para aproximar pesquisadores e atividades culturais
     </div>
     <div class="grid-item">
-      <img src="imagens\residencia.png" width="300px"/><br>
-      <strong>IFSP oferece bolsa aos voluntários da Residência Pedagógica</strong>
-      <p>Bolsa de R$ 400,00 será paga pelo período de três meses</p>
+      <figure>
+        <img src="imagens\residencia.png" width="300px"/>
+      </figure><br>
+      <strong>IFSP oferece bolsa aos voluntários da Residência Pedagógica</strong><br>
+      Bolsa de R$ 400,00 será paga pelo período de três meses
     </div>
     <div class="grid-item">
-      <img src="imagens\maratona.jpeg" width="300px"/><br>
-      <strong>Inscrições abertas para a III Maratona InterIF</strong>
-      <p>Maratona de programação do IFSP será realizada online, no dia 31 de outubro; inscrições até 26 de outubro</p>
+      <figure>
+        <img src="imagens\maratona.jpeg" width="300px"/>
+      </figure><br>
+      <strong>Inscrições abertas para a III Maratona InterIF</strong><br>
+      Maratona de programação do IFSP será realizada online, no dia 31 de outubro; inscrições até 26 de outubro
     </div>
   </div>
-
-
-
 
   <div align="center">
     <h3>Conheça o SUAP</h3>
